Update invite styling and fix HTML structure for mobile intro section

--- a/assets/style/custom.scss
+++ b/assets/style/custom.scss
@@ -581,12 +581,13 @@
                     }
 
                     .invite-amp {
-                        transform: translate(35%, 0%);
+                        transform: translate(50%, 0%);
                         color: #3E2018;
                         font-family: "UTM Centur";
                         font-size: 1.5rem;
                         font-style: normal;
                         font-weight: 400;
+                        width: 14rem;
                         line-height: normal;
                     }
                 }
