--- a/assets/style/custom.css
+++ b/assets/style/custom.css
@@ -493,12 +493,13 @@
   letter-spacing: 0.045rem;
 }
 .mobile-only-container .invite-page-2 .invite-inner .announce .invite-couple .invite-amp {
-  transform: translate(35%, 0%);
+  transform: translate(50%, 0%);
   color: #3E2018;
   font-family: "UTM Centur";
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 400;
+  width: 14rem;
   line-height: normal;
 }
 .mobile-only-container .invite-page-2 .invite-inner .invite-bottom-row {
