--- a/assets/style/custom.css
+++ b/assets/style/custom.css
@@ -443,7 +443,14 @@
   padding: 0.25rem 0.625rem;
   top: 3.88rem;
   z-index: 2;
-  right: 0;
+  right: 35px;
+  color: #3E2018;
+  font-family: "UTM Centur";
+  font-size: 2.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.045rem;
 }
 .mobile-only-container .invite-page-2 .invite-inner .invite-families {
   padding: 1.5rem 1.5rem 1.25rem;
@@ -768,7 +775,8 @@ html.no-scroll body {
   position: absolute;
   width: 18px;
   height: 18px;
-  background-image: url("/assets/image/heart.png"); /* dùng lại icon trái tim của bạn */
+  background-image: url("/assets/image/heart.png");
+  /* dùng lại icon trái tim của bạn */
   background-size: contain;
   background-repeat: no-repeat;
   opacity: 0.9;
