--- a/assets/style/mobile-440.css
+++ b/assets/style/mobile-440.css
@@ -2,7 +2,8 @@
 
 /* Site frame: cố định chiều rộng trang ở 440px và căn giữa */
 .site-frame{
-  width:440px;
+  width: 100%;
+  max-width:440px;
   margin:0 auto;
 }
 
