--- a/assets/style/custom.scss
+++ b/assets/style/custom.scss
@@ -59,7 +59,13 @@
 }
 
 .mobile-only-container {
+            width: 100%;
+        max-width: 440px;
+
+        overflow-x: hidden;
     .mobile-intro-section {
+
+
         .mobile-intro-content {
             top: 2rem;
             left: 50%;
