--- a/assets/style/custom.scss
+++ b/assets/style/custom.scss
@@ -59,10 +59,11 @@
 }
 
 .mobile-only-container {
-            width: 100%;
-        max-width: 440px;
+    width: 100%;
+    max-width: 440px;
 
-        overflow-x: hidden;
+    overflow-x: hidden;
+
     .mobile-intro-section {
 
 
@@ -148,10 +149,10 @@
             .title-month {
                 color: #333;
                 font-family: "Mongolian Baiti";
-                font-size: 1.75rem;
+                font-size: 24px;
                 font-style: normal;
                 font-weight: 400;
-                line-height: 100%;
+                line-height: normal;
                 /* 1.75rem */
             }
         }
@@ -418,7 +419,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                gap: 0.38rem;
+                gap: 1rem;
                 width: 100%;
 
                 .title-1 {
@@ -473,7 +474,7 @@
                     font-size: 4rem;
                     font-style: normal;
                     font-weight: 400;
-                    line-height: 100%;
+                    line-height: 2rem;
                     /* 4rem */
                 }
 
@@ -508,7 +509,7 @@
                 font-size: 12.5rem;
                 font-style: normal;
                 font-weight: 400;
-                line-height: 100%;
+                line-height: 80%;
                 /* 12.5rem */
             }
 
@@ -524,7 +525,7 @@
                     position: absolute;
                     background: #FFF;
                     padding: 0.25rem 0.625rem;
-                    top: 3.88rem;
+                    top: 3rem;
                     z-index: 2;
                     right: 23px;
                     color: #3E2018;
@@ -538,7 +539,7 @@
             }
 
             .invite-families {
-                padding: 1.5rem 1.5rem 1.25rem;
+                padding: 0 1.5rem 32px;
                 display: flex;
                 justify-content: space-between;
 
@@ -573,7 +574,7 @@
                     color: #3E2018;
                     text-align: center;
                     font-family: "UTM Centur";
-                    font-size: 0.875rem;
+                    font-size: 16px;
                     font-style: normal;
                     font-weight: 400;
                     line-height: normal;
@@ -664,13 +665,13 @@
                 gap: 1rem;
 
                 h1 {
-                    color: #333;
-                    text-align: center;
+                    color: #3E2018;
                     font-family: "UTM Centur";
-                    font-size: 1.5rem;
+                    font-size: 2.25rem;
                     font-style: normal;
                     font-weight: 400;
-                    line-height: 100%;
+                    line-height: normal;
+                    letter-spacing: 0.045rem;
                     /* 1.5rem */
                 }
 
@@ -720,8 +721,8 @@
                 p {
                     color: #333;
                     text-align: center;
-                    font-family: SVN-Reliant;
-                    font-size: 0.875rem;
+                    font-family: 'SVN-Reliant', sans-serif;
+                    font-size: 16px;
                     font-style: normal;
                     font-weight: 400;
                     line-height: 140%;
