--- a/assets/style/custom.css
+++ b/assets/style/custom.css
@@ -517,6 +517,7 @@
 .mobile-only-container .invite-page-2 .invite-inner .invite-bottom-row {
   display: flex;
   align-items: center;
+  margin-top: 1rem;
 }
 .mobile-only-container .invite-page-2 .invite-inner .invite-bottom-row .invite-ceremony {
   text-align: end;
@@ -555,7 +556,7 @@
   top: 1.25rem;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 .mobile-only-container .time-countdown .content .time {
   display: flex;
