--- a/assets/style/custom.scss
+++ b/assets/style/custom.scss
@@ -610,7 +610,7 @@
             .invite-bottom-row {
                 display: flex;
                 align-items: center;
-
+                margin-top: 1rem;
                 .invite-ceremony {
                     text-align: end;
 
@@ -656,7 +656,7 @@
             top: 1.25rem;
             flex-direction: column;
             align-items: center;
-            gap: 2rem;
+            gap: 1.5rem;
 
             .time {
                 display: flex;
